2008-04-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #529375

	* em-utils.h: (em_utils_in_addressbook):
	* em-utils.c: (em_utils_in_addressbook):
	* em-format-html.c: (emfh_gethttp):
	* mail-session.c: (lookup_addressbook): Look up in local address book
	for addresses to exclude mail sent by known contacts from junk
	filtering if said so in /apps/evolution/mail/display/photo_local.

	* em-format-html-display.c: (efhd_update_bar):
	* em-popup.c: (emp_standard_menu_factory): Compiler warnings fix.

2008-04-20  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #334444

	* em-format-html-display.c: (efhd_attachment_button),
	(efhd_update_bar), (efhd_message_update_bar),
	(efhd_message_add_bar): Add the attachments and draw the bar.
	* em-format-html.c: (efh_format_exec):

2008-03-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #523271

	* em-popup.c (emp_standard_menu_factory):
	Lowercase the MIME type before passing it to
	gnome_vfs_mime_get_all_applications().

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #522178

	* mail-folder-cache.c: (folder_changed): Put back hack with
	checking time of new message in the folder based with last
	time of new mail as it was before patch in bug #492702.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #519292

	* message-list.h: (message_list_set_expand_all):
	* message-list.c: (message_list_set_expand_all):
	Remove unused confusing function.
	* message-list.c: (regen_list_done):
	Use numbers instead of gboolean value.

2008-03-06  Tobias Mueller  <muelli@auftrags-killer.org>

	** Fix for bug #520745

	* mail/em-format.c: Fix format-string vulnerability
	Patch by Tor Lillqvist <tml@iki.fi>

2008-03-03  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-tree.c (emft_drop_async__done):
	Re-fix bug #351672 since my patch for bug #362638 accidentally
	reverted the original solution.

2008-03-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for BNC bug #282466
